# nes-rs

./: .gitignore  :w  Cargo.toml  scratchpad
.cargo/: config.toml
src/: apu.rs  bus.rs  cartridge.rs  cpu.rs  cpu_bus.rs  gui.rs  main.rs  mem.rs  nes.rs  ppu.rs  ram.rs
src/apu/: noise.rs  pulse.rs  triangle.rs
src/bus/: cpu_bus.rs
src/cartridge/: dummy.rs  mapper.rs  mmc1.rs  nrom.rs
src/cartridge/mapper/: dummy.rs  mmc1.rs  nrom.rs  uxrom.rs
src/cpu/: addr_mode.rs  instr.rs  op.rs  opcode.rs
src/cpu_bus/: dma.rs
src/mapper/: nrom.rs
src/ppu/: oam.rs  palette.rs  pattern_buffer.rs  screen_buffer.rs
