[package]
name = "nes-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.0"
bevy_egui = "0.28.0"
bevy_pixel_buffer = { version = "0.8.0", features = ["egui"] }
bitfield = "0.15.0"
rand = "0.8.5"
thiserror = "1.0.63"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
mockall = { version = "0.12.1", features = ["nightly"] }
